app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  h1 {
    font-size: 5.6rem;
    line-height: 5.8rem;
    text-transform: uppercase;
    letter-spacing: 0.2rem;
    font-weight: 700;
  }
  h2 {
    font-weight: 700;
    font-size: 4rem;
    text-transform: uppercase;
    line-height: 4.4rem;
    letter-spacing: 0.15rem;
  }
  h3 {
    font-size: 3.2rem;
    line-height: 3.6rem;
    text-transform: uppercase;
    letter-spacing: 0.115px;
    font-weight: 700;
  }
  h4 {
    font-size: 2.8rem;
    line-height: 3.8rem;
    text-transform: uppercase;
    letter-spacing: 0.2rem;
    font-weight: 700;
  }
  h5 {
    font-size: 2.4rem;
    line-height: 3.3rem;
    text-transform: uppercase;
    letter-spacing: 0.17rem;
    font-weight: 700;
  }
  h6 {
    font-size: 1.8rem;
    line-height: 1.9rem;
    text-transform: uppercase;
    letter-spacing: 0.13rem;
    font-weight: 700;
  }
  .overline {
    font-size: 1.4rem;
    line-height: 1.9rem;
    text-transform: uppercase;
    letter-spacing: 1rem;
    font-weight: 400;
  }
  .subTitle {
    font-size: 1.3rem;
    line-height: 2.5rem;
    text-transform: uppercase;
    letter-spacing: 0.1rem;
    font-weight: 700;
  }
  body {
    font-size: 1.5rem;
    line-height: 2.5rem;
    font-weight: 500;
  }

  .buttonText {
    font-size: 1.3rem;
    letter-spacing: 0.1rem;
    line-height: auto;
    font-weight: 700;
  }


  @media (max-width: 639px) {
    .h1-mobile {
      font-size: 3.6rem;
      font-weight: 700;
      line-height: 4rem;
      letter-spacing: 0.1286rem;
      text-transform: uppercase;
    }
  }
}
@layer components {

  .hoverSocials {
    @apply fill-white hover:fill-primary hover:transition-all hover:duration-300 hover:ease-linear
  }

  .hoverPrimary{
    @apply hover:bg-fourthly hover:text-white hover:transition-all hover:duration-300 hover:ease-linear
  }

  .hoverSecondary {
    @apply hover:bg-secondary hover:text-white hover:transition-all hover:duration-300 hover:ease-linear
  }

  .hoverTertiary{
    @apply hover:text-primary hover:transition-all hover:duration-300 hover:ease-linear
  }

  .hoverFourthly {
    @apply hover:bg-black-hover hover:text-white hover:transition-all hover:duration-300 hover:ease-linear
  }

  .btn-primary {
    @apply px-[3rem] py-[1.5rem] text-white font-bold bg-primary max-w-max buttonText uppercase hoverPrimary;
  }
  .btn-secondary {
    @apply px-[3rem] py-[1.5rem] text-black bg-white font-bold border-black border max-w-max buttonText uppercase hoverSecondary;
  }
  .btn-tertiary {
    @apply px-[3rem] py-[1.5rem] text-black font-bold flex items-center justify-center gap-x-3 max-w-max buttonText uppercase hoverTertiary;
  }
  .btn-fourthly {
    @apply px-[3rem] py-[1.5rem] text-white font-bold bg-secondary max-w-max buttonText uppercase hoverFourthly;
  }
  .col-reverse {
    @apply flex-col-reverse;
  }
  .row-reverse-laptop {
    @apply lg:flex-row-reverse;
  }
  .row-laptop {
    @apply lg:flex-row;
  }
  .row-reverse-laptop {
    @apply lg:flex-row-reverse;
  }
  .max-width-container {
    @apply container flex justify-between mx-auto gap-[4rem] py-8 md:gap-[6.3rem] md:py-[9.6rem] lg:gap-[12.5rem] lg:py-40;
  }
  .max-width-container-no-padding {
    @apply container p-0 flex justify-between mx-auto gap-[4rem]  md:gap-[6.3rem] lg:gap-[12.5rem];
  }

  .max-width-container-header {
    @apply container flex flex-col justify-between mx-auto gap-[4rem] md:gap-[6.3rem] lg:gap-[12.5rem] ;
  }

  .max-width-container-category-header {
    @apply container flex flex-col mx-auto items-center gap-[2rem] md:gap-[8rem] lg:gap-[10rem] h-[19.2rem]
  }

}

/**
 * Global styles
 */
html {
  font-size: 62.5%;
}

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
  padding: 0;
  font: inherit;
}

/* Remove list styles on ul, ol elements, default styling will be removed */
ul,
ol {
  list-style-type: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

html,
body {
  height: 100%;
  width: 100%;
}

/* Set core body defaults */
body {
  position: relative;
  text-rendering: optimizeSpeed;
}



/* A elements that don't have a class get default styles */
a {
  color: inherit; /* blue colors for links too */
  text-decoration: inherit; /* no underline */
  display: inline;
}
a:not([class]) {
  text-decoration-skip-ink: auto;
}
/* Make images easier to work with */
img,
picture {
  max-width: 100%;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

@media (min-width: 1024px) {
  .clipZX9Img {
    clip-path: polygon(0 0, 100% 0, 100% 97%, 0 97%);
  }
}

.opacityBlack {
  background-color: rgba(0, 0, 0, 0.8);
}

